# OpenView

./: .clang-format  .clang-tidy  CMakeLists.txt
src/: ActionManager.cpp  ActionManager.h  AppConfiguration.cpp  AppConfiguration.h  FormatUtil.cpp  FormatUtil.h  main.cpp
src/jobs/: BaseCacheJob.cpp  BaseCacheJob.h  FileCacheJob.cpp  FileCacheJob.h  ImageFileCacheJob.cpp  ImageFileCacheJob.h
src/ui/: ContentWidget.cpp  ContentWidget.h  ContentWidget.ui  ContentWidgetPrivate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
